--- a/01_FIFA_Rankings_Data_Acquisition.ipynb
+++ b/01_FIFA_Rankings_Data_Acquisition.ipynb
@@ -35,14 +35,14 @@
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from selenium.webdriver.common.action_chains import ActionChains\n",
+    "import validators\n",
     "\n",
     "pd.options.display.max_rows = 5000\n",
     "\n",
     "home_page = 'https://www.fifa.com/fifa-world-ranking/ranking-table/men/'\n",
     "\n",
     "# Set wait times\n",
-    "waittime = 5\n",
-    "sleeptime = 0.5\n",
+    "waittime = 0.5\n",
     "\n",
     "# Initiate web driver\n",
     "try:\n",
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "190b28f6",
+   "id": "efbc0084",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "40ea0ed2",
+   "id": "cf5af232",
    "metadata": {},
    "outputs": [
     {
@@ -2025,7 +2025,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dce1c330",
+   "id": "8af2506e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2044,7 +2044,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9e548e8d",
+   "id": "fd761642",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2066,7 +2066,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "667b6ca0",
+   "id": "94371659",
    "metadata": {},
    "outputs": [
     {
@@ -3999,8 +3999,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "15bbed05",
+   "execution_count": 7,
+   "id": "1aee3d0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4028,17 +4028,254 @@
     "    list_of_pages = get_pagination_pages()\n",
     "    for page_num in list_of_pages:\n",
     "        df_i = scrape_current_page(page_num, date)\n",
-    "        master_df = pd.concat([master_df, df_i])"
+    "        master_df = pd.concat([master_df, df_i])\n",
+    "        \n",
+    "master_df.reset_index(drop=True, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "94e4d8c6",
+   "execution_count": 10,
+   "id": "2453c178",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "63064"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(master_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "33a5698f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# master_df"
+    "# master_df.to_csv('FIFA_World_Rankings_Extracted_20210610.csv', index=False)\n",
+    "# master_df = pd.read_csv('FIFA_World_Rankings_Extracted_20210610.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "920cee2e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rank</th>\n",
+       "      <th>country</th>\n",
+       "      <th>points</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>1783.38</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>France</td>\n",
+       "      <td>1757.30</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>1742.65</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>England</td>\n",
+       "      <td>1686.78</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>1666.12</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>1648.13</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>1642.06</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>1641.95</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Uruguay</td>\n",
+       "      <td>1639.08</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>1631.55</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>1629.56</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>1609.12</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>1606.21</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Croatia</td>\n",
+       "      <td>1605.75</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Colombia</td>\n",
+       "      <td>1600.66</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>16</td>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>1598.04</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Wales</td>\n",
+       "      <td>1570.36</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>18</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>1569.81</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Chile</td>\n",
+       "      <td>1569.52</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1555.42</td>\n",
+       "      <td>27 May 2021</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    rank      country   points         date\n",
+       "0      1      Belgium  1783.38  27 May 2021\n",
+       "1      2       France  1757.30  27 May 2021\n",
+       "2      3       Brazil  1742.65  27 May 2021\n",
+       "3      4      England  1686.78  27 May 2021\n",
+       "4      5     Portugal  1666.12  27 May 2021\n",
+       "5      6        Spain  1648.13  27 May 2021\n",
+       "6      7        Italy  1642.06  27 May 2021\n",
+       "7      8    Argentina  1641.95  27 May 2021\n",
+       "8      9      Uruguay  1639.08  27 May 2021\n",
+       "9     10      Denmark  1631.55  27 May 2021\n",
+       "10    11       Mexico  1629.56  27 May 2021\n",
+       "11    12      Germany  1609.12  27 May 2021\n",
+       "12    13  Switzerland  1606.21  27 May 2021\n",
+       "13    14      Croatia  1605.75  27 May 2021\n",
+       "14    15     Colombia  1600.66  27 May 2021\n",
+       "15    16  Netherlands  1598.04  27 May 2021\n",
+       "16    17        Wales  1570.36  27 May 2021\n",
+       "17    18       Sweden  1569.81  27 May 2021\n",
+       "18    19        Chile  1569.52  27 May 2021\n",
+       "19    20          USA  1555.42  27 May 2021"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "master_df.head(20)"
    ]
   }
  ],
