--- a/01_FIFA_Rankings_Data_Acquisition.ipynb
+++ b/01_FIFA_Rankings_Data_Acquisition.ipynb
@@ -7,7 +7,16 @@
    "source": [
     "# FIFA World Rankings\n",
     "## Part 1 - Data Acquisition\n",
+    "- Using Python's Selenium package to perform web scraping\n",
     "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f91855c3",
+   "metadata": {},
+   "source": [
+    "#### Import necessary dependencies"
    ]
   },
   {
@@ -17,7 +26,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import necessary dependencies\n",
     "from bs4 import BeautifulSoup\n",
     "import urllib\n",
     "import re\n",
@@ -61,11 +69,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c882d9c",
+   "id": "b5972c1d",
    "metadata": {},
    "source": [
     "___\n",
-    "#### Get list of ranking dates and corresponding URLs"
+    "#### Setup web driver"
    ]
   },
   {
@@ -86,6 +94,15 @@
     "    driver.find_element_by_xpath('//*[@id=\"onetrust-accept-btn-handler\"]').click()\n",
     "except:\n",
     "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0937ffcf",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "#### Get list of ranking dates and corresponding URLs"
    ]
   },
   {
@@ -2009,6 +2026,7 @@
     "# Get list of dates where rankings are available\n",
     "date_elems = driver.find_elements_by_xpath(\"//li[@class='fi-ranking-schedule__nav__item']/a\")\n",
     "\n",
+    "# Create empty date list to store all dates with rankings\n",
     "date_list = []\n",
     "\n",
     "for elem in date_elems:\n",
@@ -2020,6 +2038,14 @@
     "\n",
     "date_df = pd.DataFrame(date_list) \n",
     "date_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "259a742b",
+   "metadata": {},
+   "source": [
+    "#### Define utility functions"
    ]
   },
   {
@@ -2061,6 +2087,15 @@
     "        df = df.append({'rank':rank, 'country':country, 'points':points, 'date':date}, ignore_index=True)\n",
     "    \n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acac947e",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "#### Perform iterative web scraping on every page"
    ]
   },
   {
@@ -4034,6 +4069,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a031582",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "#### View output"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "2453c178",
@@ -4052,17 +4096,6 @@
    ],
    "source": [
     "len(master_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "33a5698f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# master_df.to_csv('FIFA_World_Rankings_Extracted_20210610.csv', index=False)\n",
-    "# master_df = pd.read_csv('FIFA_World_Rankings_Extracted_20210610.csv')"
    ]
   },
   {
@@ -4276,6 +4309,25 @@
    ],
    "source": [
     "master_df.head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6685d809",
+   "metadata": {},
+   "source": [
+    "#### Export data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "ced3c32c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# master_df.to_csv('FIFA_World_Rankings_Extracted_20210610.csv', index=False)\n",
+    "# master_df = pd.read_csv('FIFA_World_Rankings_Extracted_20210610.csv')"
    ]
   }
  ],
